Use newer version of checkstyle with more checks

--- a/build.gradle
+++ b/build.gradle
@@ -11,3 +11,8 @@ dependencies {
 
   testCompile 'junit:junit:4.12'
 }
+
+checkstyle {
+  configFile "$rootDir/checkstyle.xml" as File
+  toolVersion = '6.10.1'
+}
