--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
 sudo: false
 
+notifications:
+  email: false
+
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 
